Fix flickering, navigation in FF, Help bar, and style for rules WIP
git-svn-id: svn://cherokee-project.com/CTK/trunk@4577 5dc97367-97f1-0310-9951-d761b3857238

--- a/static/css/CTK.css
+++ b/static/css/CTK.css
@@ -57,8 +57,8 @@ a { color: #27c; }
 a:hover { color: #c00; text-decoration: underline; }
 a:active { outline: none; }
 a:focus { -moz-outline-style: none; }
-h1 { color: #c00; font-weight: normal; padding: 16px 0 16px 16px; font-size: 20px; }
-h2 { color: #666; font-weight: normal; padding: 8px 0; font-size: 18px; }
+h1 { color: #c00; font-weight: normal; padding: 16px 0 16px 16px; font-size: 20px; z-index: 9000; }
+h2 { color: #666; font-weight: normal; padding: 8px 0; font-size: 18px; z-index: 9000;}
 
 /* Form Styles
  */
@@ -73,8 +73,9 @@ select { border: 1px solid #b0bfce; ibackground: #fff; padding: 2px; outline: no
 html>body #container { min-height: 100%; }
 #container { width: 960px; margin: 0 auto; text-align: left; height: 100%; }
 #topbar-container { background: #def url(/static/images/bg-bar.png) top left repeat-x; }
-#topbar { background: #fff url(/static/images/bg-bar.png) top left repeat-x; width: 960px; margin: 0 auto; text-align: left; }
-#main { background: #fff; padding: 0; margin: 0; }
+#topbar { height: 52px; background: #fff url(/static/images/bg-bar.png) top left repeat-x; width: 960px; margin: 0 auto; text-align: left; }
+#topbar img { float: left; }
+#main { background: #fff; padding: 0; margin: 0; width: 958px; margin: 0 auto;}
 
 #nav { float: right; padding:0; font-size: 11px; }
 #nav li {float: left; margin: 0;padding: 0;text-align: center; width: 64px; height: 50px; }
@@ -90,12 +91,12 @@ html>body #container { min-height: 100%; }
 #nav-mime { background: transparent url(/static/images/mime.png) no-repeat center 6px; }
 #body-mime #nav-mime a { background: transparent url(/static/images/nav-selected.gif) no-repeat center 47px; }
 #nav-vservers { background: transparent url(/static/images/vservers.png) no-repeat center 6px; }
-#body-vservers #nav-vservers a { background: transparent url(/static/images/nav-selected.gif) no-repeat center 47px; }
+#body-vservers #nav-vservers a, #body-rules #nav-vservers a { background: transparent url(/static/images/nav-selected.gif) no-repeat center 47px; }
 #nav-source { background: transparent url(/static/images/sources.png) no-repeat center 6px; }
 #body-source #nav-source a { background: transparent url(/static/images/nav-selected.gif) no-repeat center 47px; }
 #nav-advanced { background: transparent url(/static/images/advanced.png) no-repeat center 6px; }
 #body-advanced #nav-advanced a { background: transparent url(/static/images/nav-selected.gif) no-repeat center 47px; }
-#body-source, #body-vservers { overflow: hidden; }
+#body-source, #body-vservers, #body-rules { overflow: hidden; }
 
 /* JQuery Helpers
 */
@@ -190,9 +191,9 @@ a.button:active span, button:active .button-inner {
  */
 #help {
     position: absolute;
-    width: 964px;
-    padding-top: 10px;
-    z-index: 9999;
+    width: 64px;
+    top: 60px;
+    margin-left: 900px;
 }
 
 a.helpbutton {
@@ -234,6 +235,7 @@ a.helpbutton span {
   margin-top: 20px;
   display: none;
   padding: 8px;
+  z-index: 9999;
 }
 
 
@@ -366,9 +368,10 @@ a.helpbutton span {
   font-size: 16px;
   color: #27c;
   text-shadow: #fff 0px 1px 0px;
+  z-index: 9000;
 }
 
-#vservers_panel, #source_panel {
+#vservers_panel, #rules_panel, #source_panel {
  background: #fff;
  height: 320px;
  margin: 2px;
@@ -413,35 +416,40 @@ tr.panel-selected td div.row_content {
   color: #fff;
 }
 
-.vserver_content, .source_content  {
-  width: 719px;
+.vserver_content, .source_content, .rules_content  {
+  width: 716px;
   padding: 0;
   float: right;
   background-color: #fff;
 }
 
-.vserver_content h2, .source_content  h2 {
+.vserver_content h2, .source_content  h2, .rules_content h2 {
   padding-left: 16px;
   color: #27c;
   font-size: 16px;
 }
 
-.vserver_content .ui-tabs .ui-tabs-panel, .source_content .submitter {
+.vserver_content .ui-tabs .ui-tabs-panel, .source_content .submitter, .rules_content .ui-tabs .ui-tabs-panel{
   padding-left: 16px; 
   background-color: #fff;
-  border-top: 1px solid #cde;
+  border: 0;
   overflow: auto;
 }
 
-.vserver_content .ui-tabs .ui-tabs-panel {
-  border: 0;
+
+
+.source_content .submitter {
+  border-top: 1px solid #cde;
 }
 
 /* Information sources and VServers*/
 .nick  { font-weight: bold; float: left; }
+.name  { font-weight: bold; }
 .type { font-size: 11px; border: 1px solid #cde; background-color: #def; float: right; padding: 2px;}
 .host { clear: both; color: #999; font-size: 11px; white-space: nowrap;  width: 200px;}
 .inter { color: #999; font-size: 11px; white-space: nowrap; width: 200px; }
 .droot { clear: both; color: #999; font-size: 11px; white-space: nowrap; width: 200px; }
-.panel-selected .droot, .panel-selected .host, .panel-selected .inter { color: #cde; }
+.panel .comment { color: #999; font-size: 11px; white-space: nowrap; width: 200px; }
+.panel-selected .droot, .panel-selected .host, .panel-selected .inter, .panel-selected .comment { color: #cde; }
+
 
